Migration to official Binance API